fix some warns